--- a/lang/et.json
+++ b/lang/et.json
@@ -1,7 +1,7 @@
 {
-  "novaSettings.navigationItemTitle": "Seaded",
-  "novaSettings.saveButtonText": "Salvesta seaded",
-  "novaSettings.noSettingsFieldsText": "Ühtegi seadevälja ei ole defineeritud.",
-  "novaSettings.settingsSuccessToast": "Seaded uuendatud!",
-  "novaSettings.general": "Üldine"
+  "settingsTool.navigationItemTitle": "Seaded",
+  "settingsTool.saveButtonText": "Salvesta seaded",
+  "settingsTool.noSettingsFieldsText": "Ühtegi seadevälja ei ole defineeritud.",
+  "settingsTool.settingsSuccessToast": "Seaded uuendatud!",
+  "settingsTool.general": "Üldine"
 }
