--- a/lang/fa.json
+++ b/lang/fa.json
@@ -1,7 +1,7 @@
 {
-  "novaSettings.navigationItemTitle": "تنظیمات",
-  "novaSettings.saveButtonText": "ذخیره تنظیمات",
-  "novaSettings.noSettingsFieldsText": "هیچ تنظیمی تعریف نشده است.",
-  "novaSettings.settingsSuccessToast": "تنظیمات ذخیره شد.",
-  "novaSettings.general": "عمومی"
+  "settingsTool.navigationItemTitle": "تنظیمات",
+  "settingsTool.saveButtonText": "ذخیره تنظیمات",
+  "settingsTool.noSettingsFieldsText": "هیچ تنظیمی تعریف نشده است.",
+  "settingsTool.settingsSuccessToast": "تنظیمات ذخیره شد.",
+  "settingsTool.general": "عمومی"
 }
