--- a/lang/it.json
+++ b/lang/it.json
@@ -1,7 +1,7 @@
 {
-  "novaSettings.navigationItemTitle": "Impostazioni",
-  "novaSettings.saveButtonText": "Salva impostazioni",
-  "novaSettings.noSettingsFieldsText": "Nessun campo Impostazioni è stato definito.",
-  "novaSettings.settingsSuccessToast": "Impostazioni aggiornate con successo",
-  "novaSettings.general": "Generale"
+  "settingsTool.navigationItemTitle": "Impostazioni",
+  "settingsTool.saveButtonText": "Salva impostazioni",
+  "settingsTool.noSettingsFieldsText": "Nessun campo Impostazioni è stato definito.",
+  "settingsTool.settingsSuccessToast": "Impostazioni aggiornate con successo",
+  "settingsTool.general": "Generale"
 }
