--- a/lang/sk.json
+++ b/lang/sk.json
@@ -1,7 +1,7 @@
 {
-  "novaSettings.navigationItemTitle": "Nastavenia",
-  "novaSettings.saveButtonText": "Uložiť nastavenia",
-  "novaSettings.noSettingsFieldsText": "Neboli definované žiadne polia nastavení.",
-  "novaSettings.settingsSuccessToast": "Nastavenia boli úspešne aktualizované!",
-  "novaSettings.general": "Všeobecné"
+  "settingsTool.navigationItemTitle": "Nastavenia",
+  "settingsTool.saveButtonText": "Uložiť nastavenia",
+  "settingsTool.noSettingsFieldsText": "Neboli definované žiadne polia nastavení.",
+  "settingsTool.settingsSuccessToast": "Nastavenia boli úspešne aktualizované!",
+  "settingsTool.general": "Všeobecné"
 }
