--- a/lang/tr.json
+++ b/lang/tr.json
@@ -1,7 +1,7 @@
 {
-  "novaSettings.navigationItemTitle": "Ayarlar",
-  "novaSettings.saveButtonText": "Ayarları Kaydet",
-  "novaSettings.noSettingsFieldsText": "Henüz bir ayar alanı tanımlamadınız.",
-  "novaSettings.settingsSuccessToast": "Ayarlar başarıyla güncellendi!",
-  "novaSettings.general": "Genel"
+  "settingsTool.navigationItemTitle": "Ayarlar",
+  "settingsTool.saveButtonText": "Ayarları Kaydet",
+  "settingsTool.noSettingsFieldsText": "Henüz bir ayar alanı tanımlamadınız.",
+  "settingsTool.settingsSuccessToast": "Ayarlar başarıyla güncellendi!",
+  "settingsTool.general": "Genel"
 }
